...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary1">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/Accent2"
        android:clickable="true"
...
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/stix_two_text_bold"
        android:text="@string/signup_title"
        android:textColor="@color/Accent1"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
        app:hintTextColor="@color/Accent1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UserInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text_bold"
            android:hint="@string/signup_user"
            android:scrollHorizontally="false"
            android:singleLine="true"
            android:textColor="#A592A9"
            android:textColorHighlight="@color/Accent1"
            android:textColorHint="@color/Accent1"
            android:textColorLink="@color/Accent1"
...
        app:hintTextColor="@color/Accent1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PswrdInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text_bold"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#A592A9"
            android:textColorHighlight="@color/Accent1"
            android:textColorHint="@color/Accent1"
            android:textColorLink="@color/Accent1"
...
        app:hintTextColor="@color/Accent1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PswrdInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PswrdConInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix_two_text_bold"
            android:hint="@string/signup_confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#A592A9"
            android:textColorHighlight="@color/Accent1"
            android:textColorHint="@color/Accent1"
            android:textColorLink="@color/Accent1"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/Accent1"
        android:fontFamily="@font/stix_two_text_bold"
        android:text="@string/signup_signup"
        android:textColor="@color/Background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accountExists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/stix_two_text_bold"
        android:text="@string/signup_existing"
        android:textColor="@color/Accent2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

...
