<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="startup_null">No null/empty strings allowed!</string>
    <string name="startup_invalid">Invalid information!</string>
</resources>